# Simple_ID_Lottery

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
